--- a/aboutme.css
+++ b/aboutme.css
@@ -22,47 +22,14 @@ h2, p {
 	color: rgba(255,255,255,.99);
 }
 
-/*h1{
+h1{
 	margin-top: 30px;
 	font-family: 'Bodoni Moda', serif;
 	font-size: 600;
 	color: #EDF5E1;
 
 }
-*/
 
-
-h1 {
-  font-family: sans-serif;
-  margin: 100px auto;
-  color: #228B22;
-  text-align: center;
-  font-size: 30px;
-  max-width: 600px;
-  position: relative;
-}
-
-h1:before {
-  content: "";
-  display: block;
-  width: 120px;
-  height: 2px;
-  background: white;
-  left: 0;
-  top: 50%;
-  position: absolute;
-}
-
-h1:after {
-  content: "";
-  display: block;
-  width: 120px;
-  height: 2px;
-  background: white;
-  right: 0;
-  top: 50%;
-  position: absolute;
-}
 
 /*h4{
 	font-family: 'Cairo', sans-serif;
@@ -86,8 +53,8 @@ h1:after {
   /*float: right;*/
 }
 
-.nav-link {
-	size: 2x;
+.nav {
+	font-size: 2em;
 	/*float: left;*/
 }
 
