--- a/myportfolio.css
+++ b/myportfolio.css
@@ -68,3 +68,17 @@ h4{
 	font-size: 2em;
 	/*float: left;*/
 }
+
+
+@media screen and (min-width: 601px) {
+	marquee {
+	  font-size: 10vh;
+	}
+  }
+  
+  /* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
+  @media screen and (max-width: 600px) {
+	marquee {
+	  font-size: 8vh;
+	}
+  }
