--- a/myportfolio.css
+++ b/myportfolio.css
@@ -82,3 +82,17 @@ h4{
 	  font-size: 8vh;
 	}
   }
+
+
+h1, marquee{
+	margin-top: 30px;
+	font-family: 'Bodoni Moda', serif;
+	font-size: 600;
+	color: white;
+
+}
+
+h4, marquee{
+	font-family: 'Cairo', sans-serif;
+	color: white;
+}
